# 23wards

./: .firebaserc  .gitignore  13TOKYO_ROME.CSV  Cargo.toml  Trunk.toml  index.html  oldApp.jsx  package-lock.json  package.json  readme.md  styles.css  tailwind.config.js  tokyo.json
.cargo/: config.example.toml
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  pages.yml
legacy/: package.json  tailwind.config.js
legacy/src/: index.jsx  wards.json
legacy/src/js/: App.jsx  GlobalContext.jsx
legacy/src/js/components/: Navbar.jsx
public/: index.html
src/: index.js  index.jsx  main.rs  tokyo.json  wards.json
src/components/: mod.rs
src/components/parts/: mod.rs
src/components/parts/molecules/: labeled_icon_link.rs  mod.rs
src/components/parts/organisms/: layout.rs  mobile_nav.rs  mod.rs  navbar.rs  sidebar.rs
src/constants/: mod.rs  site_name.rs  wards.rs
src/contexts/: app_context.rs  mod.rs
src/js/: App.js  App.jsx  GlobalContext.jsx
src/js/components/: Navbar.js  Navbar.jsx  Sidebar.js  Sidebar.jsx
src/pages/: index.rs  login.rs  mod.rs  not_found.rs  profile.rs
