[package]
name = "random-japan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
yew-octicons = "0.3.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.6"
wasm-logger = "0.2.0"
