[package]
name = "random-japan"
version = "0.1.0"
authors = ["stevenfukase <fukasesteven@gmail.com>"]
edition = "2021"

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
yew-octicons = "0.3.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.6"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement"]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
